--- a/index.html
+++ b/index.html
@@ -28,8 +28,44 @@
       </nav>
     </div>
   </header>
+  <main>
+    <section class="hero">
+      <div class="container hero__container">
+        <h1 class="hero__title">Crypto</h1>
+        <p class="hero__subtitle">Ваш самый надежный сервис обмена криптовалюты</p>
+        <button class="hero__button">Зарегистрироваться!</button>
+      </div>
+    </section>
+  </main>
 
-  <main></main>
+  <!-- Modal window -->
+  <div class="overlay">
+    <div class="modal">
+      <div class="modal__container">
+        <h2 class="modal__title">Мгновенная регистрация на платформе</h2>
+        <form class="modal__form">
+          <fieldset class="modal__person">
+            <label class="modal__label">Имя
+              <input class="modal__input" type="text" name="firstname">
+            </label>
+            <label class="modal__label">Фамилия
+              <input class="modal__input" type="text" name="surname">
+            </label>
+            <label class="modal__label">Номер телефона
+              <input class="modal__input" type="text" name="tel">
+            </label>
+          </fieldset>
+          <button class="modal__order" type="submit">Зарегистрироваться!</button>
+        </form>
+        <button class="modal__close" type="button" aria-label="Закрыть модальное окно">
+          <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16 2C8.2 2 2 8.2 2 16C2 23.8 8.2 30 16 30C23.8 30 30 23.8 30 16C30 8.2 23.8 2 16 2ZM21.4 23L16 17.6L10.6 23L9 21.4L14.4 16L9 10.6L10.6 9L16 14.4L21.4 9L23 10.6L17.6 16L23 21.4L21.4 23Z"/>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- //Modal window -->
 
   <footer></footer>
 </body>
