--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </svg>
       </button>
       <nav class="header__navigation navigation">
-        <ul class="navigation__list">
+        <ul class="navigation__list navigation__list_header">
           <li class="navigation__item"><a href="#" class="navigation__link">Почему выбирают нас?</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link">Частые вопросы</a></li>
         </ul>
@@ -65,6 +65,18 @@
     </div>
   </div>
   <!-- //Modal window -->
-  <footer></footer>
+  <footer class="footer">
+    <div class="container footer__container">
+      <img src="img/logo.svg" alt="Логотип Crypto" class="footer__logo">
+      <div class="footer__navigation navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link">Почему выбирают нас?</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Частые вопросы</a></li>
+        </ul>
+      </div>
+      <p class="footer__copyright">© Crypto, 2022</p>
+      <a href="https://t.me/Mrshmallowww" class="footer__designer">Дизайн макета:<br>@Mrshmallowww</a>
+    </div>
+  </footer>
 </body>
 </html>
