--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </button>
       <nav class="header__navigation navigation">
         <ul class="navigation__list navigation__list_header">
-          <li class="navigation__item"><a href="#" class="navigation__link">Почему выбирают нас?</a></li>
+          <li class="navigation__item"><a href="#about-us" class="navigation__link">Почему выбирают нас?</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link">Частые вопросы</a></li>
         </ul>
       </nav>
@@ -34,6 +34,64 @@
         <h1 class="hero__title">Crypto</h1>
         <p class="hero__subtitle">Ваш самый надежный сервис обмена криптовалюты</p>
         <button class="hero__button">Зарегистрироваться!</button>
+      </div>
+    </section>
+    <section class="about-us" id="about-us">
+      <div class="container">
+        <h2 class="about-us__title">Почему выбирают нас?</h2>
+        <div class="about-us__container">
+          <div class="about-us__advantage advantage">
+            <ul class="advantage__list-button">
+              <li class="advantage__item">
+                <button class="advantage__button advantage__button_active">Удобство</button>
+              </li>
+              <li class="advantage__item">
+                <button class="advantage__button">Скорость</button>
+              </li>
+              <li class="advantage__item">
+                <button class="advantage__button">Качество</button>
+              </li>
+              <li class="advantage__item">
+                <button class="advantage__button">Надежность</button>
+              </li>
+            </ul>
+            <ul class="advantage__list-content">
+              <li class="advantage__item-content advantage__item-content_convenience advantage__item-content_active">Наш сервис обмена
+                криптовалюты Crypto интуитивно
+                понятен
+                и удобен в использовании. С нами просто.
+              </li>
+              <li class="advantage__item-content advantage__item-content_speed">У нас самая быстрая скорость по обмену криптовалюты по
+                подобным сервисам в России.
+              </li>
+              <li class="advantage__item-content advantage__item-content_quality">Нашу платформу выбирают миллионы людей.</li>
+              <li class="advantage__item-content advantage__item-content_security">Ваши пароли под надежной защитой. Нас невозможно
+                взломать.
+              </li>
+            </ul>
+          </div>
+          <div class="about-us__exchange-rates exchange-rates">
+            <h3 class="exchange-rates__title">Изменение курса в режиме реального времени</h3>
+            <ul class="exchange-rates__list">
+              <li class="exchanges__item exchanges__item_up">
+                <span class="exchange-rates__currency">RUB/AUD</span>
+                <span class="exchange-rates__value">25.59</span>
+              </li>
+              <li class="exchanges__item exchanges__item_up">
+                <span class="exchange-rates__currency">HKD/BYR</span>
+                <span class="exchange-rates__value">27.76</span>
+              </li>
+              <li class="exchanges__item exchanges__item_down">
+                <span class="exchange-rates__currency">AUD/CNH</span>
+                <span class="exchange-rates__value">72.68</span>
+              </li>
+              <li class="exchanges__item exchanges__item_up">
+                <span class="exchange-rates__currency">JPY/GBP</span>
+                <span class="exchange-rates__value">32.96</span>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -58,7 +116,8 @@
         </form>
         <button class="modal__close" type="button" aria-label="Закрыть модальное окно">
           <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path d="M16 2C8.2 2 2 8.2 2 16C2 23.8 8.2 30 16 30C23.8 30 30 23.8 30 16C30 8.2 23.8 2 16 2ZM21.4 23L16 17.6L10.6 23L9 21.4L14.4 16L9 10.6L10.6 9L16 14.4L21.4 9L23 10.6L17.6 16L23 21.4L21.4 23Z"/>
+            <path
+              d="M16 2C8.2 2 2 8.2 2 16C2 23.8 8.2 30 16 30C23.8 30 30 23.8 30 16C30 8.2 23.8 2 16 2ZM21.4 23L16 17.6L10.6 23L9 21.4L14.4 16L9 10.6L10.6 9L16 14.4L21.4 9L23 10.6L17.6 16L23 21.4L21.4 23Z"/>
           </svg>
         </button>
       </div>
@@ -70,12 +129,12 @@
       <img src="img/logo.svg" alt="Логотип Crypto" class="footer__logo">
       <div class="footer__navigation navigation">
         <ul class="navigation__list">
-          <li class="navigation__item"><a href="#" class="navigation__link">Почему выбирают нас?</a></li>
+          <li class="navigation__item"><a href="#about-us" class="navigation__link">Почему выбирают нас?</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link">Частые вопросы</a></li>
         </ul>
       </div>
       <p class="footer__copyright">© Crypto, 2022</p>
-      <a href="https://t.me/Mrshmallowww" class="footer__designer">Дизайн макета:<br>@Mrshmallowww</a>
+      <a href="https://t.me/Mrshmallowww" class="footer__designer">Дизайн макета:<br>Анастасия Ильина</a>
     </div>
   </footer>
 </body>
