Add Tabs and Exchange Rates

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
           <div class="about-us__exchange-rates exchange-rates">
             <h3 class="exchange-rates__title">Изменение курса в режиме реального времени</h3>
             <ul class="exchange-rates__list">
-              <li class="exchanges__item exchanges__item_up">
+              <li class="exchange-rates__item exchanges__item_up">
                 <span class="exchange-rates__currency">RUB/AUD</span>
                 <span class="exchange-rates__value">25.59</span>
               </li>
-              <li class="exchanges__item exchanges__item_up">
+              <li class="exchange-rates__item exchanges__item_up">
                 <span class="exchange-rates__currency">HKD/BYR</span>
                 <span class="exchange-rates__value">27.76</span>
               </li>
-              <li class="exchanges__item exchanges__item_down">
+              <li class="exchange-rates__item exchanges__item_down">
                 <span class="exchange-rates__currency">AUD/CNH</span>
                 <span class="exchange-rates__value">72.68</span>
               </li>
-              <li class="exchanges__item exchanges__item_up">
+              <li class="exchange-rates__item exchanges__item_up">
                 <span class="exchange-rates__currency">JPY/GBP</span>
                 <span class="exchange-rates__value">32.96</span>
               </li>
