--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Crypto - надежный сервис обмена криптовалюты</title>
   <script src="js/script.js" defer></script>
   <link rel="preload" href="fonts/inter-v11-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin>
